# unified-gate

./: CITATION.cff  HF_README.md  LICENSE  README.md  RESULTS.md  THEORY.md  gate_k20.pt  pyproject.toml
.github/workflows/: smoke.yml
scripts/: export_gate_to_bin.py  inspect_gate.py  plot_k_sweep.py  reproduce.py
tests/: test_smoke.py
unified_gate/: __init__.py  gate.py
unified_gate/features/: __init__.py  base.py  holographic.py  layer_wise.py  neighborhood.py  physics.py  reuse.py  round8.py  tier_b.py
