[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-gate"
version = "0.1.0"
description = "Confidence-gated adaptive LLM inference on a 7-dimensional boundary manifold"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Parrish Corcoran"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/parrishcorcoran/unified-gate"
Repository = "https://github.com/parrishcorcoran/unified-gate"

[tool.setuptools.packages.find]
include = ["unified_gate*"]
